Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI INT __stdcall C13_ListStatus(LISTADDR listaddr,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_MakeLong(USHORT valh,USHORT vall);
C13DRVAPI LPVOID __stdcall C13_MakePtr(USHORT valh,USHORT vall);
C13DRVAPI ULONG __stdcall C13_Mask(ULONG dataval,USHORT cntval);
C13DRVAPI VOID __stdcall C13_MEMWINFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MEMWINRdB(ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_MEMWINRdL(ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINRdsL(LPULONG valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINRdsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MEMWINRdW(ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrB(USHORT value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrsL(LPULONG valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MEMWINWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Mod(ULONG moda,ULONG modb);
C13DRVAPI BOOL __stdcall C13_ModeIsBC(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsMon(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotBC(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotMon(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotPlay(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotRT(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsNotSerial(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsPlay(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsRT(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ModeIsSerial(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_ModeRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_ModeWr(USHORT mode,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonConfigExx(ULONG configval,ULONG seqaddr,ULONG moncount,USHORT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonFilterSAEx(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MonRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_MonResume(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_MonStart(HCARD handleval);
C13DRVAPI INT __stdcall C13_MonStatus(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_MonStop(HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgBlockRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgBlockWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgCheck(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgCommRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgCommWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgConfig(ULONG configval,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgConfigEx(ULONG configval,USHORT cwd,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgCWD1Rd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MsgCWD1Wr(USHORT cwd1,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgCWD2Rd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MsgCWD2Wr(USHORT cwd2,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgErrorRd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MsgErrorWr(USHORT value,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgFlagRd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MsgFlagWr(USHORT msgflag,MSGADDR msgaddr,HCARD handleval);