Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS

        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ListStatus(UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MakeLong@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MakeLong(UInt16 valh, UInt16 vall);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MakePtr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* C13_MakePtr(UInt16 valh, UInt16 vall);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_Mask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_Mask(UInt32 dataval, UInt16 cntval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINFillW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINFillW(UInt16 value, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINRdB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MEMWINRdB(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINRdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MEMWINRdL(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINRdsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINRdsL(ref UInt32 valueptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINRdsW(ref UInt16 valueptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MEMWINRdW(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINWrB@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINWrB(UInt16 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINWrL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINWrL(UInt32 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINWrsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINWrsL(ref UInt32 valueptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINWrsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINWrsW(ref UInt16 valueptr, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MEMWINWrW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MEMWINWrW(UInt16 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_Mod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_Mod(UInt32 moda, UInt32 modb);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsBC(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsMon(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsNotBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsNotBC(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsNotMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsNotMon(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsNotPlay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsNotPlay(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsNotRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsNotRT(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsNotSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsNotSerial(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsPlay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsPlay(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsRT(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeIsSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ModeIsSerial(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_ModeRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ModeWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ModeWr(UInt16 mode, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonConfigEx(UInt32 configval, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonConfigExx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonConfigExx(UInt32 configval, UInt32 seqaddr, UInt32 moncount, UInt16 cardnum, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonFilterSAEx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonFilterSAEx(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MonRdEx(ref UInt16 buf, UInt16 bufcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonResume(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonStart(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonStatus(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonStop(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgBlockRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgBlockWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgCheck(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgCommRd(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgCommWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgConfig(UInt32 configval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgConfigEx(UInt32 configval, UInt16 cwd, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgCWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgCWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgCWD1Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MsgCWD1Wr(UInt16 cwd1, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgCWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgCWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgCWD2Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MsgCWD2Wr(UInt16 cwd2, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgErrorRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgErrorRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgErrorWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MsgErrorWr(UInt16 value, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgFlagRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MsgFlagRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgFlagWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MsgFlagWr(UInt16 msgflag, UInt32 msgaddr, UInt32 handleval);
